link url removed

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
                 </div>
                 <div class="es-cross__content">
                     <p class="es-cross__name">MAGNE B<sub>6</sub>®</p>
-                    <a href="https://www.aptekaolmed.pl/produkt/no-spa-40-mg-20-tabletek,45939.html?poz=1" target="_blank" class="es-cross__link">sprawdź</a>
+                    <a href="#" target="_blank" class="es-cross__link">sprawdź</a>
                 </div>
             </div>
 
@@ -289,7 +289,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
               </div>
               <div class="es-cross__content">
                   <p class="es-cross__name">MAGNE B<sub>6</sub>® FORTE 60 tab.</p>
-                  <a href="https://www.aptekaolmed.pl/produkt/no-spa-40-mg-20-tabletek,45939.html?poz=1" target="_blank" class="es-cross__link">sprawdź</a>
+                  <a href="#" target="_blank" class="es-cross__link">sprawdź</a>
               </div>
           </div>
 
@@ -303,7 +303,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
             </div>
             <div class="es-cross__content">
                 <p class="es-cross__name">MAGNE B<sub>6</sub>® FORTE 100 tab.</p>
-                <a href="https://www.aptekaolmed.pl/produkt/no-spa-40-mg-20-tabletek,45939.html?poz=1" target="_blank" class="es-cross__link">sprawdź</a>
+                <a href="#" target="_blank" class="es-cross__link">sprawdź</a>
             </div>
         </div>
             </div>
@@ -318,7 +318,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
                     </div>
                     <div class="es-cross__content">
                         <p class="es-cross__name">MAGNE B<sub>6</sub>® ZMĘCZENIE I STRES</p>
-                        <a href="https://www.aptekaolmed.pl/produkt/no-spa-40-mg-40-tabletek,14821.html?poz=2" target="_blank" class="es-cross__link">sprawdź</a>
+                        <a href="#" target="_blank" class="es-cross__link">sprawdź</a>
                     </div>
                 </div>
                 <div class="es-cross__single">
@@ -328,7 +328,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
                     </div>
                     <div class="es-cross__content">
                         <p class="es-cross__name">MAGNE B<sub>6</sub>® MAX</p>
-                        <a href="https://www.aptekaolmed.pl/produkt/no-spa-40-mg-60-tabletek-pojemnik,58944.html?poz=2" target="_blank" class="es-cross__link">sprawdź</a>
+                        <a href="#" target="_blank" class="es-cross__link">sprawdź</a>
                     </div>
                 </div>
             </div>
