font sizes update

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
         <div class="es-doze">
             <div class="es-doze__content">
                 <div class="es-doze__container">
-                    <button type="button" class="es-doze__btn es-toggleBtn">Dawkowanie
+                    <button type="button" class="es-doze__btn es-toggleBtn">Sprawdź dawkowanie
                         <img src="./images/icon-arrow.png" alt="" id="es-doze__btnImg" class="es-toggleImg">
                     </button>
                     <div class="es-doze__box es-contentBox">
