--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
                     <div class="es-doze__box es-contentBox">
                         <div class="es-doze__single">
                             <div class="es-doze__text">
-                              <p>Dorośli:</p>
+                              <p class="es-doze__textWho">Dorośli:</p>
                               <div class="es-doze__textCTn">
-                                <p>od 3 do 4 tabletek na dobę,</p>
+                                <p class="es-doze__textWho">od 3 do 4 tabletek na dobę,</p>
                                 <p class="es-doze__text--small">w 2 lub 3 dawkach podzielonych <br> podczas posiłków</p>
                               </div>
                                 
@@ -252,11 +252,11 @@ I             ZMAGAĆ SIĘ Z RÓŻNORODNYMI SYMPTOMAMI JEGO NIEDOBORU<sup>7</sup
                         <div class="es-doze__single">
                             <div class="es-doze__text">
                               <div class="es-doze__textCTn">
-                                <p>Dzieci i młodzież:</p>
+                                <p class="es-doze__textWho">Dzieci i młodzież:</p>
                                 <p class="es-doze__text--small">w wieku 6 lat lub powyżej <br> (o masie ciała ok. 20kg):</p>
                               </div>
                               <div class="es-doze__textCTn">
-                                <p>od 2 do 4 tabletek na dobę,</p>
+                                <p class="es-doze__textWho">od 2 do 4 tabletek na dobę,</p>
                                 <p class="es-doze__text--small">w 2 lub 3 dawkach podzielonych <br> podczas posiłków</p>
                               </div>
                               
